--- a/primitiveOperations_test.ipynb
+++ b/primitiveOperations_test.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils_encryptedDomain.homomorphic_operations import *"
+    "from utils_encryptedDomain.homomorphic_operations import *\n",
+    "import numpy as np"
    ]
   },
   {
@@ -89,6 +90,28 @@
    "source": [
     "decryptImage(difference2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "element_1 = 25\n",
+    "element_2 = np.array([[10, 11, 12], [13, 14, 155], [16, 17, 18]], dtype=np.int64)\n",
+    "enc_element_1 = encrypt(element_1)\n",
+    "enc_element_2 = encryptImage(element_2)\n",
+    "\n",
+    "print(tensor_homomorphicComparator(enc_element_1,enc_element_2))"
+   ]
   }
  ],
  "metadata": {
@@ -107,7 +130,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
