Fast Local Extrema

--- a/HESIFT_Test.ipynb
+++ b/HESIFT_Test.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "from feature_extractors.HESIFT import *\n",
+    "import cv2\n",
     "# Show the figures / plots inside the notebook\n",
     "%matplotlib inline"
    ]
@@ -102,33 +103,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x=findDecryptedScaleSpaceExtrema(encryptedGaussianImages,encryptedDOGImages,3,0.7,5)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 1 is out of bounds for axis 0 with size 0",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\HANY\\Desktop\\SIFT\\Homomorphically-Encrypted-SIFT\\HESIFT_Test.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/HANY/Desktop/SIFT/Homomorphically-Encrypted-SIFT/HESIFT_Test.ipynb#X21sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m findDecrypteddScaleSpaceExtrema(encryptedGaussianImages,encryptedDOGImages,\u001b[39m3\u001b[39m,\u001b[39m0.7\u001b[39m,\u001b[39m1\u001b[39m)\n",
-      "\u001b[1;32mc:\\Users\\HANY\\Desktop\\SIFT\\Homomorphically-Encrypted-SIFT\\HESIFT_Test.ipynb Cell 5\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/HANY/Desktop/SIFT/Homomorphically-Encrypted-SIFT/HESIFT_Test.ipynb#X21sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m i\u001b[39m=\u001b[39m\u001b[39m268\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/HANY/Desktop/SIFT/Homomorphically-Encrypted-SIFT/HESIFT_Test.ipynb#X21sZmlsZQ%3D%3D?line=11'>12</a>\u001b[0m j\u001b[39m=\u001b[39m\u001b[39m62\u001b[39m\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/HANY/Desktop/SIFT/Homomorphically-Encrypted-SIFT/HESIFT_Test.ipynb#X21sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mif\u001b[39;00m isEncryptedPixelAnExtremum(first_image[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:i\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m, j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:j\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m], second_image[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:i\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m, j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:j\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m], third_image[i\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:i\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m, j\u001b[39m-\u001b[39m\u001b[39m1\u001b[39m:j\u001b[39m+\u001b[39m\u001b[39m2\u001b[39m], threshold):\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/HANY/Desktop/SIFT/Homomorphically-Encrypted-SIFT/HESIFT_Test.ipynb#X21sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     localization_result \u001b[39m=\u001b[39m localizeDecryptedExtremumViaQuadraticFit(i, j, image_index \u001b[39m+\u001b[39m \u001b[39m1\u001b[39m, octave_index, num_intervals, dog_images_in_octave, sigma, contrast_threshold, image_border_width)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/HANY/Desktop/SIFT/Homomorphically-Encrypted-SIFT/HESIFT_Test.ipynb#X21sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mif\u001b[39;00m localization_result \u001b[39mand\u001b[39;00m i\u001b[39m==\u001b[39m\u001b[39m268\u001b[39m \u001b[39mand\u001b[39;00m j\u001b[39m==\u001b[39m\u001b[39m62\u001b[39m:\n",
-      "File \u001b[1;32mc:\\Users\\HANY\\Desktop\\SIFT\\Homomorphically-Encrypted-SIFT\\feature_extractors\\HESIFT.py:95\u001b[0m, in \u001b[0;36misEncryptedPixelAnExtremum\u001b[1;34m(first_subimage, second_subimage, third_subimage, threshold)\u001b[0m\n\u001b[0;32m     92\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39misEncryptedPixelAnExtremum\u001b[39m(first_subimage, second_subimage, third_subimage, threshold):\n\u001b[0;32m     93\u001b[0m \u001b[39m    \u001b[39m\u001b[39m\"\"\"Return True if the center element of the 3x3x3 input array is strictly greater than or less than all its neighbors, False otherwise\u001b[39;00m\n\u001b[0;32m     94\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[1;32m---> 95\u001b[0m     center_pixel_value \u001b[39m=\u001b[39m second_subimage[\u001b[39m1\u001b[39m, \u001b[39m1\u001b[39m]\n\u001b[0;32m     97\u001b[0m     \u001b[39mif\u001b[39;00m center_pixel_value \u001b[39m>\u001b[39m threshold:\n\u001b[0;32m     98\u001b[0m             local_maxima \u001b[39m=\u001b[39m tensor_homomorphicComparator(center_pixel_value,first_subimage) \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m     99\u001b[0m                    tensor_homomorphicComparator(center_pixel_value,third_subimage) \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    100\u001b[0m                    tensor_homomorphicComparator(center_pixel_value,second_subimage[\u001b[39m0\u001b[39m, :]) \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    101\u001b[0m                    tensor_homomorphicComparator(center_pixel_value,second_subimage[\u001b[39m2\u001b[39m, :]) \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    102\u001b[0m                    homomorphicComparator(center_pixel_value,second_subimage[\u001b[39m1\u001b[39m, \u001b[39m0\u001b[39m]) \u001b[39mand\u001b[39;00m \\\n\u001b[0;32m    103\u001b[0m                    homomorphicComparator(center_pixel_value,second_subimage[\u001b[39m1\u001b[39m, \u001b[39m2\u001b[39m])\n",
-      "\u001b[1;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 0"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'cv2.KeyPoint'>\n",
+      "4688\n"
      ]
     }
    ],
    "source": [
-    "x=findDecryptedScaleSpaceExtrema(encryptedGaussianImages,encryptedDOGImages,3,0.7,1)"
+    "print(type(x[0]))\n",
+    "print(len(x))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -153,6 +166,62 @@
    "source": [
     "for octave in decryptedDOGImages:\n",
     "    show_images(octave)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for y in x:\n",
+    "    if y.pt==(210.5706787109375, 131.22010803222656):\n",
+    "        print(True)\n",
+    "     "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isEncryptedPixelAnExtremumm(first_subimage, second_subimage, third_subimage, threshold):\n",
+    "    \"\"\"Return True if the center element of the 3x3x3 input array is strictly greater than or less than all its neighbors, False otherwise\n",
+    "    \"\"\"\n",
+    "    center_pixel_value = second_subimage[1, 1]\n",
+    "    tensor_center_pixel = np.full((3,3),center_pixel_value)\n",
+    "    tensor_neighbor_pixels = np.array([first_subimage,second_subimage,third_subimage])\n",
+    "    if center_pixel_value > threshold:\n",
+    "            local_maxima = tensor_homomorphicComparator(tensor_center_pixel,tensor_neighbor_pixels)\n",
+    "            if not local_maxima:\n",
+    "                return tensor_homomorphicComparator(tensor_center_pixel,tensor_neighbor_pixels,False)\n",
+    "            return local_maxima\n",
+    "\n",
+    "    return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image_1 = np.array([[1, 2, 3],\n",
+    "                   [4, 5, 6],\n",
+    "                   [7, 8, 9]])\n",
+    "image_2 = np.array([[9, 8, 7],\n",
+    "                   [6, 8, 4],\n",
+    "                   [3, 2, 1]])\n",
+    "image_3 = np.array([[11, 12, 13],\n",
+    "                   [14, 15, 16],\n",
+    "                   [17, 18, 19]])\n",
+    "\n",
+    "cipher1 = encryptImage(image_1)\n",
+    "cipher2 = encryptImage(image_2)\n",
+    "cipher3 = encryptImage(image_3)\n",
+    "\n",
+    "print(isEncryptedPixelAnExtremumm(cipher1,cipher2,cipher3,0))"
    ]
   }
  ],
