--- a/primitiveOperations_test.ipynb
+++ b/primitiveOperations_test.ipynb
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
        "       [-23, -25, -27]], dtype=int64)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,24 +93,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "[1 0]\n"
      ]
     }
    ],
    "source": [
-    "element_1 = 25\n",
-    "element_2 = np.array([[10, 11, 12], [13, 14, 155], [16, 17, 18]], dtype=np.int64)\n",
-    "enc_element_1 = encrypt(element_1)\n",
-    "enc_element_2 = encryptImage(element_2)\n",
+    "x = np.array([[100, 100,100], [100,100, 100], [100, 100, 100]], dtype=np.int64)\n",
+    "y = np.array([[-50, -50, -50], [-50, -50, -50], [-50, -50, -50]], dtype=np.int64)\n",
+    "n = np.array([[1, 2, 3], [-4, -5, -6], [7, 51, 9]], dtype=np.int64)\n",
+    "plaintext1 = np.array([[x,x,x],[y,y,y]])\n",
+    "plaintext2 =  np.array([[n,n,n],[n,n,n]])\n",
+    "ciphertext1 = encryptImage(plaintext1)\n",
+    "ciphertext2 = encryptImage(plaintext2)\n",
+    "result=tensor_homomorphicComparator(ciphertext1,ciphertext2)\n",
     "\n",
-    "print(tensor_homomorphicComparator(enc_element_1,enc_element_2))"
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isEncryptedPixelAnExtremummm(tensor_center_pixels,tensor_neighbor_pixels):\n",
+    "\n",
+    "    local_maxima = tensor_homomorphicComparator(tensor_center_pixels,tensor_neighbor_pixels)\n",
+    "    local_minima = tensor_homomorphicComparator(tensor_center_pixels,tensor_neighbor_pixels,False)\n",
+    "\n",
+    "    return local_maxima+local_minima"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(isEncryptedPixelAnExtremummm(ciphertext1,ciphertext2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 1 1]\n"
+     ]
+    }
+   ],
+   "source": [
+    "plaintext1 = 10\n",
+    "plaintext2 = np.array([[1, 2, 3], [-4, -5, -6], [7, 3, 9]], dtype=np.int64)\n",
+    "result = tensor_homomorphicComparator(encrypt(10),encryptImage(plaintext2))\n",
+    "print(result)"
    ]
   }
  ],
